# gem-scouting

./: .gitignore  debug_structure.py  docker-compose.yml  inspect_all.py  main.py  pyproject.toml  scrape_and_save.py
src/database/: db.py  init_db.py  models.py  schemas.py  seed_static.py
